// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render alert modal 1`] = `
.c5 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}

.c8 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  color: #f5222d;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  bottom: 0;
  outline: 0;
  z-index: 1500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  visibility: visibility;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  max-width: calc(100% - 0.01px) !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  bottom: 0;
  outline: 0;
  z-index: 1500;
  opacity: 1;
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  background-color: rgba(0,0,0,.65);
}

.c2 {
  position: relative;
  opacity: 1;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  z-index: 1501;
  box-shadow: 0 1.1rem 1.5rem -.7rem rgba(0,0,0,0.2),0 2.4rem 3.8rem .3rem rgba(0,0,0,0.14),0 .9rem 4.6rem .8rem rgba(0,0,0,0.12);
  border-radius: .2rem;
  background-color: #fff;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin: 3.2rem;
  width: 550px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  height: auto;
  max-height: 90vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 3rem 3rem;
  font-size: 1.6rem;
  line-height: 1.5;
  word-wrap: break-word;
  max-height: 35rem;
  overflow: auto;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  color: rgba(0,0,0,.85);
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.3;
  margin-left: 1rem;
  text-transform: uppercase;
}

.c10 {
  margin-top: 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #f5222d;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  position: absolute !important;
  top: 1rem;
  right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  word-break: keep-all;
  cursor: pointer;
  position: relative;
  outline: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 1.6rem;
  background-color: #fff;
  color: #000000a6;
  width: unset;
  border: .1rem solid rgba(0,0,0,.15);
  border-color: #d9d9d9;
  padding: 0.9rem 1.8rem;
  border-radius: .4rem;
  line-height: 1.5;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border: none;
  color: #0000008a;
  width: 3.2rem;
  height: 3.2rem;
  border-radius: 50%;
  padding: 0;
  background-color: #fff;
}

.c4 div + span,
.c4 span + span {
  margin: 0 .8rem;
}

.c4::before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: #fff;
  opacity: .35;
  content: "";
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity .2s;
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  pointer-events: none;
  display: none;
}

.c4:hover {
  border-color: rgba(0,0,0,.54);
  color: rgba(0,0,0,.68);
}

@media (max-width:768px) {
  .c2 {
    width: auto !important;
    margin: 1rem;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  />
  <div
    className="c2"
    onClick={[Function]}
  >
    <button
      className="c3 c4"
      disabled={false}
      href={null}
      icon="times"
      onClick={[Function]}
      size="default"
      type="button"
    >
      <div
        className="c5"
        color={undefined}
      >
        <span
          aria-hidden={true}
          className="fa fa-times"
          style={undefined}
        />
      </div>
    </button>
    <div
      className="c6"
      style={undefined}
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          color="error"
        >
          <span
            aria-hidden={true}
            className="fa fa-times-circle fa-lg"
            style={undefined}
          />
        </div>
        <span
          className="c9"
        >
          Delete Box
        </span>
      </div>
      <div
        className="c10"
      >
        <p>
          Are you sure to delete this?
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<List /> should render basic modal 1`] = `
.c8 {
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: inherit;
  color: inherit;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: auto;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  bottom: 0;
  outline: 0;
  z-index: 1500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  visibility: visibility;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  max-width: calc(100% - 0.01px) !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  bottom: 0;
  outline: 0;
  z-index: 1500;
  opacity: 1;
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  background-color: rgba(0,0,0,.65);
}

.c2 {
  position: relative;
  opacity: 1;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  z-index: 1501;
  box-shadow: 0 1.1rem 1.5rem -.7rem rgba(0,0,0,0.2),0 2.4rem 3.8rem .3rem rgba(0,0,0,0.14),0 .9rem 4.6rem .8rem rgba(0,0,0,0.12);
  border-radius: .2rem;
  background-color: #fff;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin: 3.2rem;
  width: 550px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  height: auto;
  max-height: 90vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  padding: 1.5rem 3rem;
  border-radius: .4rem .4rem 0 0;
  background: #fff;
  color: rgba(0,0,0,.65);
  border-bottom: .1rem solid #e5e5e5;
}

.c4 {
  margin: 0;
  font-size: 2rem;
  line-height: 1.3;
  font-weight: 500;
  color: rgba(0,0,0,.85);
}

.c5 {
  padding: 3rem 3rem;
  font-size: 1.6rem;
  line-height: 1.5;
  word-wrap: break-word;
  max-height: 35rem;
  overflow: auto;
}

.c6 {
  padding: 1.5rem 3rem;
  border-top: .1rem solid #e5e5e5;
  background: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  border-radius: 0 0 .4rem .4rem;
}

.c6 > * {
  margin-left: 1rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  word-break: keep-all;
  cursor: pointer;
  position: relative;
  outline: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 1.6rem;
  background-color: #1c8ffb;
  color: #fff;
  width: unset;
  border: .1rem solid rgba(0,0,0,.15);
  border-color: #1c8ffb;
  padding: 0.9rem 1.8rem;
  border-radius: .4rem;
  line-height: 1.5;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  background-color: rgba(0,0,0,0);
  border-color: #1c8ffb;
  color: #1c8ffb;
}

.c7 div + span,
.c7 span + span {
  margin: 0 .8rem;
}

.c7::before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: #fff;
  opacity: .35;
  content: "";
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity .2s;
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  pointer-events: none;
  display: none;
}

.c7:hover {
  border-color: #1779d5;
  color: #1779d5;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  word-break: keep-all;
  cursor: pointer;
  position: relative;
  outline: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 1.6rem;
  background-color: #1c8ffb;
  color: #fff;
  width: unset;
  border: .1rem solid rgba(0,0,0,.15);
  border-color: #1c8ffb;
  padding: 0.9rem 1.8rem;
  border-radius: .4rem;
  line-height: 1.5;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c9 div + span,
.c9 span + span {
  margin: 0 .8rem;
}

.c9:hover {
  background-color: rgba(28,143,251,0.9);
}

.c9::before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: #fff;
  opacity: .35;
  content: "";
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity .2s;
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  pointer-events: none;
  display: none;
}

@media (max-width:768px) {
  .c2 {
    width: auto !important;
    margin: 1rem;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  />
  <div
    className="c2"
    onClick={[Function]}
  >
    <div
      className="c3"
      style={undefined}
    >
      <div
        className="c4"
      >
        Welcome Basic Modal
      </div>
    </div>
    <div
      className="c5"
      style={undefined}
    >
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </div>
    <div
      className="c6"
      style={undefined}
    >
      <button
        className="c7"
        disabled={false}
        href={null}
        size="default"
        type="button"
      >
        
        <span
          className="c8"
        >
          Cancel
        </span>
      </button>
      <button
        className="c9"
        disabled={false}
        href={null}
        size="default"
        type="button"
      >
        
        <span
          className="c8"
        >
          Oke
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<List /> should render fullscreen modal 1`] = `
.c5 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}

.c11 {
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: inherit;
  color: inherit;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: auto;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  bottom: 0;
  outline: 0;
  z-index: 1500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  visibility: visibility;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  max-width: calc(100% - 0.01px) !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  bottom: 0;
  outline: 0;
  z-index: 1500;
  opacity: 1;
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  background-color: rgba(0,0,0,.65);
}

.c2 {
  position: relative;
  opacity: 1;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 0.3s cubic-bezier(0.4,0,0.2,1) 0ms;
  z-index: 1501;
  box-shadow: 0 1.1rem 1.5rem -.7rem rgba(0,0,0,0.2),0 2.4rem 3.8rem .3rem rgba(0,0,0,0.14),0 .9rem 4.6rem .8rem rgba(0,0,0,0.12);
  border-radius: .2rem;
  background-color: #fff;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: none;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  padding: 1.5rem 3rem;
  border-radius: .4rem .4rem 0 0;
  background: #fff;
  color: rgba(0,0,0,.65);
  border-bottom: .1rem solid #e5e5e5;
}

.c7 {
  margin: 0;
  font-size: 2rem;
  line-height: 1.3;
  font-weight: 500;
  color: rgba(0,0,0,.85);
}

.c8 {
  padding: 3rem 3rem;
  font-size: 1.6rem;
  line-height: 1.5;
  word-wrap: break-word;
  overflow: auto;
}

.c9 {
  padding: 1.5rem 3rem;
  border-top: .1rem solid #e5e5e5;
  background: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  border-radius: 0 0 .4rem .4rem;
}

.c9 > * {
  margin-left: 1rem;
}

.c3 {
  position: absolute !important;
  top: 1rem;
  right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  word-break: keep-all;
  cursor: pointer;
  position: relative;
  outline: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 1.6rem;
  background-color: #fff;
  color: #000000a6;
  width: unset;
  border: .1rem solid rgba(0,0,0,.15);
  border-color: #d9d9d9;
  padding: 0.9rem 1.8rem;
  border-radius: .4rem;
  line-height: 1.5;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border: none;
  color: #0000008a;
  width: 3.2rem;
  height: 3.2rem;
  border-radius: 50%;
  padding: 0;
  background-color: #fff;
}

.c4 div + span,
.c4 span + span {
  margin: 0 .8rem;
}

.c4::before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: #fff;
  opacity: .35;
  content: "";
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity .2s;
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  pointer-events: none;
  display: none;
}

.c4:hover {
  border-color: rgba(0,0,0,.54);
  color: rgba(0,0,0,.68);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  word-break: keep-all;
  cursor: pointer;
  position: relative;
  outline: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 1.6rem;
  background-color: #1c8ffb;
  color: #fff;
  width: unset;
  border: .1rem solid rgba(0,0,0,.15);
  border-color: #1c8ffb;
  padding: 0.9rem 1.8rem;
  border-radius: .4rem;
  line-height: 1.5;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  background-color: rgba(0,0,0,0);
  border-color: #1c8ffb;
  color: #1c8ffb;
}

.c10 div + span,
.c10 span + span {
  margin: 0 .8rem;
}

.c10::before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: #fff;
  opacity: .35;
  content: "";
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity .2s;
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  pointer-events: none;
  display: none;
}

.c10:hover {
  border-color: #1779d5;
  color: #1779d5;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  word-break: keep-all;
  cursor: pointer;
  position: relative;
  outline: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 1.6rem;
  background-color: #1c8ffb;
  color: #fff;
  width: unset;
  border: .1rem solid rgba(0,0,0,.15);
  border-color: #1c8ffb;
  padding: 0.9rem 1.8rem;
  border-radius: .4rem;
  line-height: 1.5;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c12 div + span,
.c12 span + span {
  margin: 0 .8rem;
}

.c12:hover {
  background-color: rgba(28,143,251,0.9);
}

.c12::before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: #fff;
  opacity: .35;
  content: "";
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity .2s;
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  pointer-events: none;
  display: none;
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  />
  <div
    className="c2"
    onClick={[Function]}
  >
    <button
      className="c3 c4"
      disabled={false}
      href={null}
      icon="times"
      onClick={[Function]}
      size="default"
      type="button"
    >
      <div
        className="c5"
        color={undefined}
      >
        <span
          aria-hidden={true}
          className="fa fa-times"
          style={undefined}
        />
      </div>
    </button>
    <div
      className="c6"
      style={undefined}
    >
      <div
        className="c7"
      >
        Welcome Fullscreen Modal
      </div>
    </div>
    <div
      className="c8"
      style={undefined}
    >
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p
        style={
          Object {
            "margin": "0 0 20px 0",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </div>
    <div
      className="c9"
      style={undefined}
    >
      <button
        className="c10"
        disabled={false}
        href={null}
        size="default"
        type="button"
      >
        
        <span
          className="c11"
        >
          Cancel
        </span>
      </button>
      <button
        className="c12"
        disabled={false}
        href={null}
        size="default"
        type="button"
      >
        
        <span
          className="c11"
        >
          Oke
        </span>
      </button>
    </div>
  </div>
</div>
`;
